Fix dropdown direction on mobile (take two)

--- a/app/frontend/public/global.css
+++ b/app/frontend/public/global.css
@@ -62,3 +62,7 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+.autocomplete-list {
+  top: 0px !important;
+}
